--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="author" content="Ahmed Maajid" />
   <head>
     <title>Web Luxe, Your Trusted Partner</title>
-    <link rel="stylesheet" href="assets/style/style.css" />
-    <link rel="stylesheet" href="assets/style/media.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -16,7 +16,7 @@
   <body>
     <div class="front-page">
       <header>
-        <img src="assets/images/icon-removebg-preview.png" alt="" />
+        <img src="icon-removebg-preview.png" alt="" />
         <nav>
           <ul>
             <i class="fa fa-bars" id="bar" aria-hidden="true"></i>
@@ -338,8 +338,8 @@
         active Instagram everyday, you can contact us via E-mail.
       </p>
       <div>
-        <img src="assets/images/gmailLogo.png" alt="" srcset="" />
-        <img src="assets/images/instagramLogo.png" alt="" />
+        <img src="gmailLogo.png" alt="" srcset="" />
+        <img src="instagramLogo.png" alt="" />
       </div>
       <h3 class="pt-10">
         This site Created by, <strong>Web Luxe Team</strong>
