--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Web Lue, Your Trusted Partner." />
-  <meta name="keywords" content="keyword1, keyword2, keyword3" />
+  <meta name="description" content="Web Luxe, Your Trusted Partner." />
+  <meta name="keywords" content="Web Design, Web Luxe, Small Business, Startup Web Design, Web Design in Sri Lanka, Web Design in Batticaloa, Freelancers' Websites,
+Agency Web Design " />
   <meta name="author" content="Ahmed Maajid" />
   <head>
-    <title>Web Luxe, Your Trusted Partner</title>
+    <title>Web Luxe, Your Trusted Partner | A Web Design Agency</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="media.css" />
     <link
