--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Web Luxe, Your Trusted Partner." />
+  <meta name="description" content="Way Loft, Your Trusted Partner." />
   <meta name="keywords" content="Web Design, Web Luxe, Small Business, Startup Web Design, Web Design in Sri Lanka, Web Design in Batticaloa, Freelancers' Websites,
 Agency Web Design " />
   <meta name="author" content="Ahmed Maajid" />
@@ -95,7 +95,7 @@ Agency Web Design " />
             <div class="container_card">
               <h3>Personalized Solutions</h3>
               <p>
-                At Web Luxe, we believe in tailor-made solutions. We work
+                At Way Loft, we believe in tailor-made solutions. We work
                 closely with our clients to understand their unique needs and
                 goals. From custom designs to specific functionalities, we
                 ensure that each website we create reflects the individuality of
@@ -144,7 +144,7 @@ Agency Web Design " />
           tuned for upcoming client testimonials!
         </p>
 
-        <button>Looking for a Website?</button>
+        <a href="#contact">Looking for a Website?</a>
       </div>
     </section>
 
@@ -335,7 +335,7 @@ Agency Web Design " />
     <footer>
       <h2>Get in <strong>Touch</strong> with Us</h2>
       <p>
-        Our agency (web luxe) is not being in more social media platfoms, we
+        Our agency (way loft) is not being in more social media platfoms, we
         active Instagram everyday, you can contact us via E-mail.
       </p>
       <div>
@@ -343,7 +343,7 @@ Agency Web Design " />
         <img src="instagramLogo.png" alt="" />
       </div>
       <h3 class="pt-10">
-        This site Created by, <strong>Web Luxe Team</strong>
+      This site was created by <strong>Way Loft Team</strong>
       </h3>
       <div class="arrow-up">
         <i class="fa fa-arrow-up" aria-hidden="true"></i>
