--- a/index.html
+++ b/index.html
@@ -350,6 +350,6 @@ Agency Web Design " />
       </div>
     </footer>
 
-    <script src="assets/scripts/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
