--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@ Agency Web Design " />
         active Instagram everyday, you can contact us via E-mail.
       </p>
       <div>
-        <img src="gmailLogo.png" alt="" srcset="" />
-        <img src="instagramLogo.png" alt="" />
+        <a href="mailto:webluxeinfo@gmail.com"><img src="gmailLogo.png" alt="Gmail" /></a>
+        <a href="https://www.instagram.com/wayloft.designs/"><img src="instagramLogo.png" alt="" /></a>
       </div>
       <h3 class="pt-10">
       This site was created by <strong>Way Loft Team</strong>
