--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Agency Web Design " />
           tuned for upcoming client testimonials!
         </p>
 
-        <a href="#contact">Looking for a Website?</a>
+        <button class="testimonialBtn">Looking for a Website?</button>
       </div>
     </section>
 
